# DramaPi

./: .gitignore  CMakeLists.txt  README.md  button_test.py  buzzer_test.py  drama_show.sh  lcd_test.py
include/: Button.h  Buzzer.h  CommandRunner.h  ContextDramaLibrary.h  CpuMonitor.h  DiskMonitor.h  DistanceSensor.h  DramaEngine.h  DramaEvent.h  DramaLibrary.h  DramaPi.h  EventDetector.h  HumanDetector.h  HumanState.h  LCD1602.h  Led.h  MatrixController.h  MatrixMode.h  Melody.h  MemoryMonitor.h  Mood.h  MoodEngine.h  PassiveBuzzer.h  Personality.h  RGBLed.h  ReminderLibrary.h  Servo.h  ServoMode.h  StartupMelody.h  StatusLightMode.h  StatusLights.h  SystemStatus.h  TemperatureMonitor.h  UptimeMonitor.h
src/: Buzzer.cpp  CommandRunner.cpp  ContextDramaLibrary.cpp  CpuMonitor.cpp  DiskMonitor.cpp  DramaEngine.cpp  DramaLibrary.cpp  DramaPi.cpp  EventDetector.cpp  HumanDetector.cpp  HumanInteraction.cpp  HumanInteraction.h  LCD1602.cpp  Led.cpp  MoodEngine.cpp  PassiveBuzzer.cpp  Servo.cpp  StatusLights.cpp  TemperatureMonitor.cpp  UptimeMonitor.cpp  lgpio_buzzer_test.cpp  main.cpp  mood_randomizer.cpp  passive_buzzer_test.cpp  servo_calibration.cpp  servo_sweep.cpp  ultrasonic_test.cpp
src/drama/: ReminderLibrary.cpp
src/hardware/: Button.cpp  Buzzer.cpp  DistanceSensor.cpp  Led.cpp  MatrixController.cpp  RGBLed.cpp  Servo.cpp
src/human/: HumanDetector.cpp
src/system/: MemoryMonitor.cpp
tests/: demo_mood.cpp  test_lcd.cpp  test_led.cpp  test_matrix_controls.cpp  test_passive_buzzer.cpp
